[tool.poetry]
name = "finance"
version = "0.1.0"
description = ""
authors = ["GlobalAA <globala977@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic-settings = "^2.5.2"
aiogram = "^3.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
